# file_iter

./: .coveragerc  LICENSE  README.md  pyproject.toml
file_iter/: __init__.py  file_iter.py
